--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -18,6 +18,11 @@
   </footer>
 
   <aside class="price">
-    <%= humanized_money_with_symbol product.price %>
+    <%= humanized_money_with_symbol product.price %>  
   </aside>
+  <% if product.quantity == 0 %>
+  <aside class="quantity">
+    <p>sold out</p>
+  </aside>
+  <% end %>
 </article>
