--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+
+<% if current_user %>
+  Signed in as <%= current_user.firstname %> | <%= link_to "Logout", '/logout' %>
+<% else %>
+  <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
+<% end %>
+
+
+
   <%= render 'layouts/top_nav' %>
 
   <main class="container">
@@ -17,3 +26,5 @@
   <%= yield :end_of_body %>
 </body>
 </html>
+
+
