--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,8 +5,15 @@
   </header>
 
   <article class="product-detail">
-
+  
     <div class="row">
+
+    <div class="reviews">
+    <% @product.reviews.each do |review|%>
+    <p>Description<%= review.description %></p>
+    <p>Rating <%=review.rating %></p>
+    <% end%>
+    </div>
 
       <div class="col-sm-4">
         <%= image_tag @product.image.url, class: 'main-img' %>
@@ -25,6 +32,20 @@
         </dl>
       </div>
     </div>
+
+    <h2>New Review</h2>
+
+<%= form_for([@product, @review]) do |f| %>
+  <div class="field">
+    Rating<%= f.text_field :rating %><br>
+    Description<%= f.text_field :description %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
+
+<%= link_to 'Back', products_path %>
 
   </article>
 
